fix appearing keyboard on mobile

--- a/src/style/_layouts.sass
+++ b/src/style/_layouts.sass
@@ -279,7 +279,8 @@
   &__create-bottombar
    +r(768)
       height: 40px
-
+  &__create-swaplang
+    +nosel
   &__create-topbar
     > .Select
       width: 40%
@@ -289,6 +290,7 @@
       box-shadow: 0 2px 6px rgba(29, 122, 184, 0.3)
     img
       vertical-align: middle
+      
     &__chooser
       position: relative
       margin-left: auto
@@ -310,13 +312,14 @@
 
       &-menu
         position: absolute
-        width: 120%
+        width: 0
         right: 0
         top: 118%
         opacity: 0
         z-index: -1
         +tr(opacity .5s)
         &.show-chooser-menu
+          width: 120%
           opacity: 1
           +tr(opacity .5s)
           z-index: 100
